<resources>
    <string name="app_name">assignment_newest</string>
    <string name="next">Next</string>
    <string name="random">Random number</string>
    <string name="pick">Pick A number to Start Quiz</string>
    <string name="chosen">Chosen number</string>
    <string name="multiply">*</string>
    <string name="select">Select Number</string>
    <string name="equality">=</string>
    <string name="timer">00:00</string>
    <string name="ra"></string>



</resources>